RESOLVED FIXED310972
Fix std::accumulate truncating float values in parseKeyTimes assertion
https://bugs.webkit.org/show_bug.cgi?id=310972
Summary Fix std::accumulate truncating float values in parseKeyTimes assertion
Ahmad Saleem
Reported 2026-03-28 03:41:03 PDT
ssia
Attachments
Radar WebKit Bug Importer
Comment 1 2026-03-28 03:41:11 PDT
Ahmad Saleem
Comment 2 2026-03-28 03:42:14 PDT
EWS
Comment 3 2026-03-29 00:26:58 PDT
Committed 310175@main (4e73e067c843): <https://commits.webkit.org/310175@main> Reviewed commits have been landed. Closing PR #61569 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.