Fix std::accumulate truncating float values in parseKeyTimes assertion https://bugs.webkit.org/show_bug.cgi?id=310972 rdar://173577708

Reviewed by Antoine Quint.

The ASSERT used 0 (int) as the initial value, causing all float
values to be truncated to int during accumulation, making the
assertion always trivially pass. Use 0.0f instead.

* Source/WebCore/svg/SVGAnimationElement.cpp:
(WebCore::parseKeyTimes):

Canonical link: https://commits.webkit.org/310175@main