Source/WebCore/svg/SVGAnimationElement.cpp
@@ -79,7 +79,7 @@ static Vector<float> parseKeyTimes(StringView value, bool verifyOrder)
     }
 
     if (verifyOrder && !result.isEmpty() && !result.last()) {
-        ASSERT(!std::accumulate(result.begin(), result.end(), 0));
+        ASSERT(!std::accumulate(result.begin(), result.end(), 0.0f));
         return { };
     }
 
